[package]
name = "flex-error"
version = "0.1.0"
authors = ["Soares Chen <soares.chen@maybevoid.com>"]
edition = "2018"

[dependencies]
paste = "1.0.5"
eyre = { version = "0.6.5", optional = true }
anyhow = { version = "1.0.40", optional = true }

[features]
default = ["string_tracer"]
std = []
string_tracer = []
eyre_tracer = ["eyre", "std"]
anyhow_tracer = ["anyhow", "std"]
