[package]
name = "flex-error"
version = "0.1.0"
edition = "2018"
license    = "Apache-2.0"
repository = "https://github.com/informalsystems/flex-error"
authors    = ["Informal Systems <hello@informal.systems>"]
description = "Flexible error definitions using macros and traits"
readme = "../README.md"

[dependencies]
paste = "1.0.5"
eyre = { version = "0.6.5", optional = true }
anyhow = { version = "1.0.40", optional = true }

[features]
default = ["eyre_tracer", "anyhow_tracer"]
std = []
eyre_tracer = ["eyre", "std"]
anyhow_tracer = ["anyhow", "std"]
